fix(css): remove overflow styling around tables

--- a/assets/css/tables.css
+++ b/assets/css/tables.css
@@ -1,9 +1,3 @@
-*:has(> table) {
-  display: block;
-  max-width: 100%;
-  overflow: auto;
-}
-
 table {
   tbody {
     tr {
